# m-thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: vis_3D_deformation_field.py  watch_sim_ans_volume.py
arrange/: 3Dregistration_from_3cs.py  README.md  arrange_sim_env.sh  calc_3D_elastix.py  exec_elastix_simulation.py  initialize.py  make_3D_answer_data.py  make_3d_deformation_field.py  make_answer_data.py  make_deformation_fieldcsv.py  make_elastix_data.py  make_folders.py  matching.py  skelton_registration.py  watch_nrrd.py
arrange/debug/: shift_registration.py  watch_cross_section_slider.py  watch_deformation_field.py  watch_mhd.py
docs/: EC2_env_tips.md
exec/: README.md
exec/axial/: exec_list.csv  exec_list_sample.csv  exec_per_simulation.py  exec_per_simulation.sh
exec/multi/: exec_list.csv  exec_list_sample.csv  exec_per_simulation.py  exec_per_simulation.sh
mpm_mac/: Makefile  README.md  main.cpp  makefile_backup.txt
mpm_mac/Header/: Grid.h  Grid_Point.h  Parameters.h  Particle.h  Particle_Cloud.h
mpm_mac/Source/: Grid.cpp  Grid_Point.cpp  Particle.cpp  Particle_Cloud.cpp
mpm_mac/cpp_debug/: read_mhd  read_mhd.cpp
param/: 2D_elastix.txt  2D_elastix_Bspline.txt  3D_elastix.txt  Bspline_first.txt  registration_3d_mask.txt
src/skelton_registration_mac_dev03/: __init__.py
visualize_result/: ply_animation_shading.py  testRender.py  watch_3d_images.py  watch_3d_images_designate_angle.py  watch_two_nrrdfiles.py
